# wasmkernel

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SPEC.md  wasmkernel-issue-rolldown-async.md
.github/: RELEASING.md
.github/workflows/: ci.yml  publish.yml
cmake/: wasi-sdk.cmake
demo/: README.md  index.html  package.json  serve.ts
examples/: README.md
examples/browser/: README.md  index.html  main.js  package.json  vite.config.js
examples/cf-paged-do/: .gitignore  README.md  package.json  wrangler.toml
examples/cf-paged-do/src/: index.js
examples/cloudflare-worker/: README.md  package.json  test.sh  wrangler.toml
examples/cloudflare-worker/src/: index.js
examples/node/: README.md  package.json  parse.mjs
examples/web-worker/: README.md  index.html  main.js  package.json  vite.config.js  worker.js
scripts/: build-guests.sh  build-kernel.sh  build.sh  install-rolldown.sh  install-wasi-sdk.sh  sync-package.sh
src/kernel/: asyncify_stubs.c  paged_mem.c  paged_mem.h  paged_mem_hooks.h  scheduler.c  scheduler.h  wasmkernel.c
src/platform_wasi/: platform_init.c  platform_internal.h  shared_platform.cmake
tests/: wasmkernel.test.ts
tests/emnapi/: build_tests.sh  child_wrapper.js  entry_point.h  napi_runtime_cjs_wrapper.mjs  node_binding_shim.js  run_all.mjs  run_emnapi_native.mjs  run_emnapi_test.mjs  util.js
tests/emnapi/wasm/: arg.wasm  argon2_real.wasm  array.wasm  async.wasm  async_cleanup_hook.wasm  async_context.wasm  bcrypt.wasm  bigint.wasm  buffer.wasm  buffer_finalizer.wasm  callback.wasm  cbinfo.wasm  cleanup_hook.wasm  constructor.wasm  conversion.wasm  dataview.wasm  date.wasm  env.wasm  error.wasm  exception.wasm  fatal_exception.wasm  filename.wasm  finalizer.wasm  fnfac.wasm  fnwrap.wasm  function.wasm  general.wasm  hello.wasm  make_callback.wasm  newtarget.wasm  number.wasm  object.wasm  object_exception.wasm  objfac.wasm  objnestedwrap.wasm  objwrap.wasm  passwrap.wasm  pool.wasm  promise.wasm  property.wasm  (+20 more)
tests/ext/: diag_oxide_parser.mjs  repro_oxc_strcorrupt.mjs  run_oxc_parser_upstream.mjs  vitest_shim.mjs
tests/ext/oxide-repro/: README.md  index.html  serve.mjs
tests/guest/: alloc.c  args.c  asyncify_indirect.c  bigalloc.c  exit42.c  fuel_fairness.c  infinite_loop.c  many_threads.c  mutex_counter.c  napi_async_promise.c  napi_node_compat.c  napi_node_compat.wasm  napi_test.c  napi_test.wasm  parallel_sum.c  poll_sleep.c  sleep_and_compute.c  stack_overflow.c  thread_raw.c  thread_simple.c  thread_spawn.c  trap.c
tests/host/: bench_paging.mjs  bigalloc_paged.mjs  bigalloc_sqlite.mjs  helpers.mjs  measure_rss.mjs  measure_rss_guests.mjs  measure_rss_rolldown.mjs  napi_rs_loader.mjs  napi_runtime.mjs  paged_napi_smoke.mjs  repro_rolldown_rss.mjs  run_asyncify_indirect.mjs  run_wasmkernel.mjs  test_argon2.mjs  test_bcrypt.mjs  test_napi.mjs  test_napi_async_promise.mjs  test_napi_node_compat.mjs  test_oxc_parser.mjs  test_oxide.mjs  test_package.mjs  test_paged_memory.mjs  test_rolldown.mjs  test_soak.mjs  test_watchdog.mjs  verify_worker_paged.mjs
tests/pkgs/oxc/package/: browser-bundle.js  package.json  parser.wasi-browser.js
tests/pkgs/package/: argon2.wasi-browser.js  package.json
tests/pkgs/rolldown/package/: package.json
